CLO-29894 - Update mail library to Jakarta Mail API 2.1
- angus mail 2.0.3 no longer makes illegal reflective access